--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ header a {
 
 .dropdown-links {
     display: none;
-    z-index: 1;
+    z-index: 3;
     position: absolute;
 }
 
@@ -134,7 +134,7 @@ section {
 .about-content img {
     width: 302px;
     height: 365px;
-    border-radius: 200px;
+    border-radius: 15px;
     border: 2px solid white;
 }
 
@@ -398,6 +398,7 @@ input[type=checkbox]:checked~label>img {
         width: 100vw;
         justify-content: center;
         margin: 0;
+        gap: 20px;
     }
 
     .landing  ul{
@@ -405,4 +406,48 @@ input[type=checkbox]:checked~label>img {
         padding-right: 10px;
     }
 
+    .about-content img {
+        width: 202px;
+        height: 265px;
+        border-radius: 15px;
+    }
+    
+    .about-content {
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+        font-size: 16px;
+        padding: 10px;
+    }
+
+    .slideshow {
+         gap: 0;
+    }
+
+    .studies-all {
+        gap: 2vw;
+    }
+
+    .studies {
+        gap: 30vw;
+    }
+
+    .years-names {
+        font-size: 18px;
+    }
+
+    .arrow-img {
+        height: 50px;
+        width: 50px;
+        cursor: none;
+        transition: none;
+    }
+
+    .arrow-img:hover {
+        transform: none;
+    }
+
+    .link-box span {
+        display: none;
+    }
 }
